--- a/src/visualize.ipynb
+++ b/src/visualize.ipynb
@@ -563,7 +563,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "myenv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -577,9 +577,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.9.12"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "c3e96f50085f5ead0d3dcb1063b2dc08c8dc5e8e0e7cf993f6b371f0ecea3bb9"
