--- a/src/test.ipynb
+++ b/src/test.ipynb
@@ -1200,7 +1200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -1211,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1226,7 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -1245,7 +1245,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1259,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -1290,32 +1290,36 @@
      "output_type": "stream",
      "text": [
       "SNLI_TEST\n",
-      "\n",
-      "\n",
-      "Couldn't remove .//18 03_01 32 38_snli_test.csv because  [WinError 2] The system cannot find the file specified: './/18 03_01 32 38_snli_test.csv'\n",
       "Final SNLI example from snli_test\n",
       "Sentence1:   <s> This church choir sings to the masses as they sing joyous songs from the book at a church . </s>  LENGHT:  21\n",
-      "Sentence2:   <s> The church has cracks in the ceiling . </s>  LENGHT:  10\n"
+      "Sentence2:   <s> The church has cracks in the ceiling . </s>  LENGHT:  10\n",
+      "Gold label:   neutral\n",
+      "Explanation 1 :   <s> not all churches have cracks in the ceiling </s>\n",
+      "Target expl 1 :   not all churches have cracks in the ceiling </s> <p> <p> <p> <p> <p> <p> <p> <p> <p> <p> <p> <p> <p> <p> <p> <p> <p> <p> <p> <p>  LENGHT:  9\n"
      ]
     },
     {
-     "ename": "AttributeError",
-     "evalue": "'dict' object has no attribute 'iteritems'",
+     "ename": "RuntimeError",
+     "evalue": "Expected all tensors to be on the same device, but found at least two devices, cuda:0 and cpu! (when checking argument for argument index in method wrapper__index_select)",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [14]\u001b[0m, in \u001b[0;36m<cell line: 9>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      6\u001b[0m criterion_expl\u001b[38;5;241m.\u001b[39msize_average \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[0;32m      8\u001b[0m params\u001b[38;5;241m.\u001b[39mesnli_path \u001b[38;5;241m=\u001b[39m ESNLI_PATH\n\u001b[1;32m----> 9\u001b[0m \u001b[43meval_all\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmyModel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mexpl_net\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcriterion_expl\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mparams\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32m~\\Desktop\\Things\\Jupyter Stuff\\CS4248\\Project\\ghrepo\\4248-project\\src\\eval_attention.py:281\u001b[0m, in \u001b[0;36meval_all\u001b[1;34m(esnli_net, expl_to_labels_net, criterion_expl, params)\u001b[0m\n\u001b[0;32m    279\u001b[0m \n\u001b[0;32m    280\u001b[0m # SNLI\n\u001b[1;32m--> 281\u001b[0m test_acc, test_bleu_score, test_ppl = evaluate_snli_final(esnli_net, expl_to_labels_net, criterion_expl, 'snli_test', snli_test, snli_dev_no_unk, snli_test_no_unk, word_vec, word_index, batch_size, print_every, current_run_dir, visualize=True)\n\u001b[0;32m    282\u001b[0m #final_dev_acc, dev_bleu_score, final_dev_ppl = evaluate_snli_final(esnli_net, expl_to_labels_net, criterion_expl, 'snli_dev', snli_dev, snli_dev_no_unk, snli_test_no_unk, word_vec, word_index, batch_size, print_every, current_run_dir, visualize=False)\n\u001b[0;32m    283\u001b[0m \n",
-      "File \u001b[1;32m~\\Desktop\\Things\\Jupyter Stuff\\CS4248\\Project\\ghrepo\\4248-project\\src\\eval_attention.py:63\u001b[0m, in \u001b[0;36mevaluate_snli_final\u001b[1;34m(esnli_net, expl_to_labels_net, criterion_expl, dataset, data, snli_dev_no_unk, snli_test_no_unk, word_vec, word_index, batch_size, print_every, current_run_dir, visualize)\u001b[0m\n\u001b[0;32m     61\u001b[0m \tprint(\"Sentence1:  \", ' '.join(s1[i]), \" LENGHT: \", s1_len[0])\n\u001b[0;32m     62\u001b[0m \tprint(\"Sentence2:  \", ' '.join(s2[i]), \" LENGHT: \", s2_len[0])\n\u001b[1;32m---> 63\u001b[0m \tprint(\"Gold label:  \", get_key_from_val(label[i], NLI_DIC_LABELS))\n\u001b[0;32m     64\u001b[0m \n\u001b[0;32m     65\u001b[0m out_lbl = [0, 1, 2, 3]\n",
-      "File \u001b[1;32m~\\Desktop\\Things\\Jupyter Stuff\\CS4248\\Project\\ghrepo\\4248-project\\src\\mutils.py:169\u001b[0m, in \u001b[0;36mget_key_from_val\u001b[1;34m(val, dic_labels)\u001b[0m\n\u001b[0;32m    168\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget_key_from_val\u001b[39m(val, dic_labels):\n\u001b[1;32m--> 169\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m k, v \u001b[38;5;129;01min\u001b[39;00m \u001b[43mdic_labels\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43miteritems\u001b[49m():\n\u001b[0;32m    170\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m v \u001b[38;5;241m==\u001b[39m val:\n\u001b[0;32m    171\u001b[0m             \u001b[38;5;28;01mreturn\u001b[39;00m k\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'dict' object has no attribute 'iteritems'"
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [13]\u001b[0m, in \u001b[0;36m<cell line: 10>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      7\u001b[0m criterion_expl\u001b[38;5;241m.\u001b[39msize_average \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[0;32m      9\u001b[0m params\u001b[38;5;241m.\u001b[39mesnli_path \u001b[38;5;241m=\u001b[39m ESNLI_PATH\n\u001b[1;32m---> 10\u001b[0m \u001b[43meval_all\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmyModel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mexpl_net\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcriterion_expl\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mparams\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32m~\\Desktop\\Things\\Jupyter Stuff\\CS4248\\Project\\ghrepo\\4248-project\\src\\eval_attention.py:281\u001b[0m, in \u001b[0;36meval_all\u001b[1;34m(esnli_net, expl_to_labels_net, criterion_expl, params)\u001b[0m\n\u001b[0;32m    274\u001b[0m \t\t\u001b[38;5;28meval\u001b[39m(data_type)[split] \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m<s>\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m+\u001b[39m\n\u001b[0;32m    275\u001b[0m \t\t\t[word \u001b[38;5;28;01mfor\u001b[39;00m word \u001b[38;5;129;01min\u001b[39;00m sent\u001b[38;5;241m.\u001b[39msplit() \u001b[38;5;28;01mif\u001b[39;00m word \u001b[38;5;129;01min\u001b[39;00m word_vec] \u001b[38;5;241m+\u001b[39m\n\u001b[0;32m    276\u001b[0m \t\t\t[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m</s>\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;28;01mfor\u001b[39;00m sent \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28meval\u001b[39m(data_type)[split]])\n\u001b[0;32m    280\u001b[0m \u001b[38;5;66;03m# SNLI\u001b[39;00m\n\u001b[1;32m--> 281\u001b[0m test_acc, test_bleu_score, test_ppl \u001b[38;5;241m=\u001b[39m \u001b[43mevaluate_snli_final\u001b[49m\u001b[43m(\u001b[49m\u001b[43mesnli_net\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mexpl_to_labels_net\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcriterion_expl\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43msnli_test\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msnli_test\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msnli_dev_no_unk\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msnli_test_no_unk\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mword_vec\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mword_index\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbatch_size\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mprint_every\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcurrent_run_dir\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvisualize\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[0;32m    282\u001b[0m \u001b[38;5;66;03m#final_dev_acc, dev_bleu_score, final_dev_ppl = evaluate_snli_final(esnli_net, expl_to_labels_net, criterion_expl, 'snli_dev', snli_dev, snli_dev_no_unk, snli_test_no_unk, word_vec, word_index, batch_size, print_every, current_run_dir, visualize=False)\u001b[39;00m\n\u001b[0;32m    284\u001b[0m final_dev_acc, dev_bleu_score, final_dev_ppl \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m0\u001b[39m\n",
+      "File \u001b[1;32m~\\Desktop\\Things\\Jupyter Stuff\\CS4248\\Project\\ghrepo\\4248-project\\src\\eval_attention.py:80\u001b[0m, in \u001b[0;36mevaluate_snli_final\u001b[1;34m(esnli_net, expl_to_labels_net, criterion_expl, dataset, data, snli_dev_no_unk, snli_test_no_unk, word_vec, word_index, batch_size, print_every, current_run_dir, visualize)\u001b[0m\n\u001b[0;32m     76\u001b[0m \t\u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTarget expl \u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mstr\u001b[39m(index) \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m :  \u001b[39m\u001b[38;5;124m\"\u001b[39m, get_sentence_from_indices(word_index, tgt_expl_batch[:, \u001b[38;5;241m0\u001b[39m]), \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m LENGHT: \u001b[39m\u001b[38;5;124m\"\u001b[39m, lens_tgt_expl[\u001b[38;5;241m0\u001b[39m])\n\u001b[0;32m     79\u001b[0m \u001b[38;5;66;03m# model forward, tgt_labels is still None bcs in test mode we get the predicted labels\u001b[39;00m\n\u001b[1;32m---> 80\u001b[0m out_expl \u001b[38;5;241m=\u001b[39m \u001b[43mesnli_net\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[43ms1_batch\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43ms1_len\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[43ms2_batch\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43ms2_len\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minput_expl_batch\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmode\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mteacher\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvisualize\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[0;32m     81\u001b[0m \u001b[38;5;66;03m# ppl\u001b[39;00m\n\u001b[0;32m     82\u001b[0m loss_expl \u001b[38;5;241m=\u001b[39m criterion_expl(out_expl\u001b[38;5;241m.\u001b[39mview(out_expl\u001b[38;5;241m.\u001b[39msize(\u001b[38;5;241m0\u001b[39m) \u001b[38;5;241m*\u001b[39m out_expl\u001b[38;5;241m.\u001b[39msize(\u001b[38;5;241m1\u001b[39m), \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m), tgt_expl_batch\u001b[38;5;241m.\u001b[39mview(tgt_expl_batch\u001b[38;5;241m.\u001b[39msize(\u001b[38;5;241m0\u001b[39m) \u001b[38;5;241m*\u001b[39m tgt_expl_batch\u001b[38;5;241m.\u001b[39msize(\u001b[38;5;241m1\u001b[39m)))\n",
+      "File \u001b[1;32mD:\\CodingStuffNoSpace\\anaconda3\\lib\\site-packages\\torch\\nn\\modules\\module.py:1194\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[1;34m(self, *input, **kwargs)\u001b[0m\n\u001b[0;32m   1190\u001b[0m \u001b[38;5;66;03m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[0;32m   1191\u001b[0m \u001b[38;5;66;03m# this function, and just call forward.\u001b[39;00m\n\u001b[0;32m   1192\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_backward_hooks\n\u001b[0;32m   1193\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[1;32m-> 1194\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m forward_call(\u001b[38;5;241m*\u001b[39m\u001b[38;5;28minput\u001b[39m, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[0;32m   1195\u001b[0m \u001b[38;5;66;03m# Do not call functions when jit is used\u001b[39;00m\n\u001b[0;32m   1196\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[38;5;241m=\u001b[39m [], []\n",
+      "Input \u001b[1;32mIn [6]\u001b[0m, in \u001b[0;36meSNLIAttention.forward\u001b[1;34m(self, s1, s2, expl, mode, visualize)\u001b[0m\n\u001b[0;32m    561\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mforward\u001b[39m(\u001b[38;5;28mself\u001b[39m, s1, s2, expl, mode, visualize):\n\u001b[0;32m    562\u001b[0m \t\u001b[38;5;66;03m# s1 : (s1, s1_len)\u001b[39;00m\n\u001b[0;32m    563\u001b[0m \t\u001b[38;5;66;03m# s2 : (s2, s2_len)\u001b[39;00m\n\u001b[0;32m    564\u001b[0m \t\u001b[38;5;66;03m# expl : Variable(T x bs x 300)\u001b[39;00m\n\u001b[1;32m--> 566\u001b[0m \tu, u_emb \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mencoder\u001b[49m\u001b[43m(\u001b[49m\u001b[43ms1\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;66;03m# u = max_T_enc x bs x (2 * enc_dim) ; u_emb = 1 x bs x (2 * enc_dim)\u001b[39;00m\n\u001b[0;32m    567\u001b[0m \tv, v_emb \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mencoder(s2) \n\u001b[0;32m    569\u001b[0m \tout_expl \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdecoder(expl, u, v, u_emb, v_emb, mode, visualize)\n",
+      "File \u001b[1;32mD:\\CodingStuffNoSpace\\anaconda3\\lib\\site-packages\\torch\\nn\\modules\\module.py:1194\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[1;34m(self, *input, **kwargs)\u001b[0m\n\u001b[0;32m   1190\u001b[0m \u001b[38;5;66;03m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[0;32m   1191\u001b[0m \u001b[38;5;66;03m# this function, and just call forward.\u001b[39;00m\n\u001b[0;32m   1192\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_backward_hooks\n\u001b[0;32m   1193\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[1;32m-> 1194\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m forward_call(\u001b[38;5;241m*\u001b[39m\u001b[38;5;28minput\u001b[39m, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[0;32m   1195\u001b[0m \u001b[38;5;66;03m# Do not call functions when jit is used\u001b[39;00m\n\u001b[0;32m   1196\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[38;5;241m=\u001b[39m [], []\n",
+      "Input \u001b[1;32mIn [7]\u001b[0m, in \u001b[0;36mBLSTMEncoder.forward\u001b[1;34m(self, sent_tuple)\u001b[0m\n\u001b[0;32m     36\u001b[0m idx_unsort \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39margsort(idx_sort)\n\u001b[0;32m     38\u001b[0m idx_sort \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mfrom_numpy(idx_sort)\u001b[38;5;241m.\u001b[39mcuda() \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mis_cuda() \\\n\u001b[0;32m     39\u001b[0m \t\u001b[38;5;28;01melse\u001b[39;00m torch\u001b[38;5;241m.\u001b[39mfrom_numpy(idx_sort)\n\u001b[1;32m---> 40\u001b[0m sent \u001b[38;5;241m=\u001b[39m \u001b[43msent\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mindex_select\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mVariable\u001b[49m\u001b[43m(\u001b[49m\u001b[43midx_sort\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     42\u001b[0m \u001b[38;5;66;03m# Handling padding in Recurrent Networks\u001b[39;00m\n\u001b[0;32m     43\u001b[0m sent_packed \u001b[38;5;241m=\u001b[39m nn\u001b[38;5;241m.\u001b[39mutils\u001b[38;5;241m.\u001b[39mrnn\u001b[38;5;241m.\u001b[39mpack_padded_sequence(sent, sent_len)\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: Expected all tensors to be on the same device, but found at least two devices, cuda:0 and cpu! (when checking argument for argument index in method wrapper__index_select)"
      ]
     }
    ],
    "source": [
     "# myModel((\"I like to eat\", 4), (\"I like to drink too\", 5), 856800,\"forloop\", False)\n",
     "myModel.eval()\n",
+    "myModel.to('cuda')\n",
     "\n",
     "pad_idx = params.word_index[\"<p>\"]\n",
     "criterion_expl = nn.CrossEntropyLoss(ignore_index=pad_idx).cuda()\n",
@@ -1324,6 +1328,13 @@
     "params.esnli_path = ESNLI_PATH\n",
     "eval_all(myModel, expl_net, criterion_expl, params)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
