Move visualize file to pre run folder

--- a/EDA/pre-run/visualize.ipynb
+++ b/EDA/pre-run/visualize.ipynb
@@ -274,6 +274,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The data is quite balanced"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
