Edit some markdowns

--- a/EDA/post-run/post-run_esnli_error_analysis.ipynb
+++ b/EDA/post-run/post-run_esnli_error_analysis.ipynb
@@ -1280,8 +1280,7 @@
    "source": [
     "Conlusion: this error case is not valid. Generally premise is longer than hypothesis.\n",
     "Compare the distribution of sentence length difference in correct and wrong predicion:\n",
-    "- Distribution is similar, just that normalised count for wrong prediction is higher when premise is much larger than hypothesis.\n",
-    "- It means in the wrong prediction, a larger portion is from big length difference."
+    "- Sentence length difference distributions between correct and wrong predictions are similar."
    ]
   },
   {
