Add README for second notebook, improve README for first notebook

--- a/e-SNLI/EDA/post-run/Predicted Explanation Evaluation/EDA - Sensibility of Predicted Explanation.ipynb
+++ b/e-SNLI/EDA/post-run/Predicted Explanation Evaluation/EDA - Sensibility of Predicted Explanation.ipynb
@@ -1,6 +1,35 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# EDA - Sensibility of Predicted Explanation (Notebook 2)\n",
+    "\n",
+    "Please view the notebook for \"Predicted Explanation Quality\" first (Notebook 1).\n",
+    "\n",
+    "After filtering out the uninformative explanations using the MED to template method described in the \"Predicted Explanation Quality\" notebook, we use human evaluation to determine whether the remaining generated explanations makes sense.\n",
+    "\n",
+    "## Our Human Evaluation Method\n",
+    "\n",
+    "To conduct our human evaluation, as we look at the first 180 rows of remaining data after the uninformative explanations are filtered out. This is similar to and in line with what the original e-SNLI paper did when conducting human evaluation. We only do the first 180 rows because there are 6 of us working on this project, and we manually evaluate 30 rows each.\n",
+    "\n",
+    "In order to measure the sensibility of the predicted explanations, we create a new metric called *satisfactory_score*, which measures to what extent does the explanation make sense and justifies the relation between the respective premise and hypothesis.\n",
+    "\n",
+    "In conducting the human evaluation, we follow these steps to determine if the predicted explanation should get a *satisfactory_score* of 0 (for unsatisfactory) or 1 (for satisfactory).\n",
+    "\n",
+    "1. The partial scoring mechanism is not relevant to us as we do not have predefined \"correct arguments\" for each explanation to compare to.\n",
+    "1. Firstly, read the Premise, the Hypothesis, then the Predicted Explanation\n",
+    "1. Give a score of 0 if explanation is grammatically wrong/cut off halfway/completely off/useless/does not provide info about the relationship between the premise and hypothesis\n",
+    "1. Give a score of 1 if explanation MAKES SENSE as a sentence and provides information about the relation between the premise and hypothesis (Correct Explanation)\n",
+    "1. Fill in the score for each row under the column satisfactory_score\n",
+    "\n",
+    "\n",
+    "This notebook looks into how the sensibility (*satisfactory_score*) of the predicted explanations relates to other aspects of the dataset, such as the MED of the corresponding predicted explanations to one of the uninformative explanation templates found in Appendix A of the original e-SNLI paper, or how it relates to the accuracy of the predicted labels."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
