Revert "Update post-run_esnli_error_analysis.ipynb"
This reverts commit 615b52326a0936afccb39d1f29e86bb2971c61d1.

--- a/e-SNLI/EDA/post-run/post-run_esnli_error_analysis.ipynb
+++ b/e-SNLI/EDA/post-run/post-run_esnli_error_analysis.ipynb
@@ -960,6 +960,10 @@
     "- Index 1947: Model identifies the key contradictory phrases: \"woman with a blue hat\" and \"woman with a red hat\", but mentions that the former \"does not indicate\" the latter.\n",
     "- Index 5531: Model identifies the key contradictory phrases: \"traveling in a small wooden boat\" and \"waiting for a larger boat\", but mentions that the former \"does not mean\" the latter.\n",
     "- Index 6957: Model identifies the key contradictory phrases: \"skiing\" and \"bundled up\", but mentions that the former \"does not imply\" the latter.\n",
+    "\n",
+    "3. Some of the data are just dirty and should not have been used as input. Some examples are as follows:\n",
+    "- Index 3070: A dog \"coming out\" of a tunnel can also be \"dancing out\" of the tunnel. Both statements can be true, and thus, should not have been labelled as \"contradiction\".\n",
+    "- Index 1841: Workers who \"blow orange leaves off patches of grass next to a wet sidewalk\" can also \"blow leaves at each other for fun\", as the workers could have blown leaves from patches of grass at each other for fun. Since both statements can be true, this should not have been labelled as \"contradiction\"."
    ]
   },
   {
