--- a/e-SNLI/EDA/post-run/post-run_esnli_error_analysis.ipynb
+++ b/e-SNLI/EDA/post-run/post-run_esnli_error_analysis.ipynb
@@ -959,8 +959,7 @@
     "\n",
     "2. The model correctly identifies the important contradictory phrases in the Premise and Hypothesis that should be compared, yet does not think they are contradictory, but rather, unrelated. Some examples are as follows:\n",
     "- Index 1947: Model identifies the key contradictory phrases: \"woman with a blue hat\" and \"woman with a red hat\", but mentions that the former \"does not indicate\" the latter.\n",
-    "- Index 5531: Model identifies the key contradictory phrases: \"traveling in a small wooden boat\" and \"waiting for a larger boat\", but mentions that the former \"does not mean\" the latter.\n",
-    "- Index 6957: Model identifies the key contradictory phrases: \"skiing\" and \"bundled up\", but mentions that the former \"does not imply\" the latter."
+    "- Index 5531: Model identifies the key contradictory phrases: \"traveling in a small wooden boat\" and \"waiting for a larger boat\", but mentions that the former \"does not mean\" the latter."
    ]
   },
   {
