Add e-SNLI datasets

--- a/e-SNLI/EDA/pre-run/pre-run-EDA-sentence-distribution.ipynb
+++ b/e-SNLI/EDA/pre-run/pre-run-EDA-sentence-distribution.ipynb
@@ -18,10 +18,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_path_1 = '../data/esnli_train_1.csv'\n",
-    "train_path_2 = '../data/esnli_train_2.csv'\n",
-    "dev_path = '../data/esnli_dev.csv'\n",
-    "test_path = '../data/esnli_test.csv'"
+    "train_path_1 = '../../dataset/esnli_train_1.csv'\n",
+    "train_path_2 = '../../dataset/esnli_train_2.csv'\n",
+    "dev_path = '../../dataset/esnli_dev.csv'\n",
+    "test_path = '../../dataset/esnli_test.csv'"
    ]
   },
   {
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,12 +229,13 @@
     "    for p in ax.patches:\n",
     "        # put the count of each class on top of the bar and in the middle\n",
     "        ax.annotate(str(int(p.get_height())), (p.get_x() + p.get_width() / center, p.get_height() / 2))\n",
-    "    plt.savefig(file_name, bbox_inches='tight', pad_inches=0.5, dpi=300)"
+    "    if file_name != '':\n",
+    "        plt.savefig(file_name, bbox_inches='tight', pad_inches=0.5, dpi=300)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -249,12 +250,12 @@
     }
    ],
    "source": [
-    "plot_class_distribution(train, 'Training Data Distribution', '../plots/train_class_distribution.png', 3.5)"
+    "plot_class_distribution(train, 'Training Data Distribution', '', 3.5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -269,12 +270,12 @@
     }
    ],
    "source": [
-    "plot_class_distribution(dev, 'Validation Data Distribution', '../plots/dev_class_distribution.png', 2.8)"
+    "plot_class_distribution(dev, 'Validation Data Distribution', '', 2.8)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +290,7 @@
     }
    ],
    "source": [
-    "plot_class_distribution(test, 'Test Data Distribution', '../plots/test_class_distribution.png', 2.8)"
+    "plot_class_distribution(test, 'Test Data Distribution', '', 2.8)"
    ]
   }
  ],
