Move the dataset folder outside

--- a/e-SNLI/EDA/pre-run/pre-run-EDA-sentence-distribution.ipynb
+++ b/e-SNLI/EDA/pre-run/pre-run-EDA-sentence-distribution.ipynb
@@ -18,10 +18,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_path_1 = '../../dataset/esnli_train_1.csv'\n",
-    "train_path_2 = '../../dataset/esnli_train_2.csv'\n",
-    "dev_path = '../../dataset/esnli_dev.csv'\n",
-    "test_path = '../../dataset/esnli_test.csv'"
+    "train_path_1 = '../../../dataset/esnli_train_1.csv'\n",
+    "train_path_2 = '../../../dataset/esnli_train_2.csv'\n",
+    "dev_path = '../../../dataset/esnli_dev.csv'\n",
+    "test_path = '../../../dataset/esnli_test.csv'"
    ]
   },
   {
